--- a/stylesheet.css
+++ b/stylesheet.css
@@ -14,21 +14,45 @@
   --neutral-color-6: hsl(0, 0%, 85%);
 
   /* Typography */
-  --font-size-xs: 1rem;
-  --font-size-s: 1.125rem;
-  --font-size-base: 2rem;
-  --font-size-medium: 2.5rem;
-  --font-size-l: 3rem;
-  --font-size-xl: 4rem;
-  --line-height-xs: 1.625rem;
-  --line-height-base: 2.25rem;
-  --line-height-medium: 2.75rem;
-  --line-height-l: 3rem;
-  --line-height-xl: 4rem;
-  --letter-spacing: 0.25rem;
+  --font-size-xs: 1rem; /* 16px */
+  --font-size-s: 1.125rem; /* 18px */
+  --font-size-base: 2rem; /* 32px */
+  --font-size-medium: 2.5rem; /* 40px */
+  --font-size-l: 3rem; /* 48px */
+  --font-size-xl: 4rem; /* 64px */
+  --line-height-xs: 1.625rem; /* 26px */
+  --line-height-base: 2.25rem; /* 36px */
+  --line-height-medium: 2.75rem; /* 44px */
+  --line-height-l: 3rem; /* 48px */
+  --line-height-xl: 4rem; /* 64px */
+  --letter-spacing: 0.25rem; /* 4px */
 
-  /* Spacing */
- 
+  /* Spacing 24 space definitions with 6 naming convention = 4 in each group*/
+  /* 4px,11px,15px,16px,19px,24px,25px,30px,32px,34px,40px,48px,54px,61px,64px,66px,67px,72px,80px,84px,88px,92px,110px,125px */
+  --space-xs-1: 0.25rem; /* 4px */
+  --space-xs-2: 0.6875rem; /* 11px */
+  --space-xs-3: 0.9375rem; /* 15px */
+  --space-xs-4: 1rem; /* 16px */
+  --space-s-1: 1.1875rem; /* 19px */
+  --space-s-2: 1.5rem; /* 24px */
+  --space-s-3: 1.5625rem; /* 25px */
+  --space-s-4: 1.875rem; /* 30px */
+  --space-base-1: 2rem; /* 32px */
+  --space-base-2: 2.125rem; /* 34px */
+  --space-base-3: 2.5rem; /* 40px */
+  --space-base-4: 3rem; /* 48px */
+  --space-medium-1: 3.375rem; /* 54px */
+  --space-medium-2: 3.8125rem; /* 61px */
+  --space-medium-3: 4rem; /* 64px */
+  --space-medium-4: 4.125rem; /* 66px */
+  --space-l-1: 4.1875rem; /* 67px */
+  --space-l-2: 4.5rem; /* 72px */
+  --space-l-3: 5rem; /* 80px */
+  --space-l-4: 5.25rem; /* 84px */
+  --space-xl-1: 5.5rem; /* 88px */
+  --space-xl-2: 5.75rem; /* 92px */
+  --space-xl-3: 6.875rem; /* 110px */
+  --space-xl-4: 7.8125rem; /* 125px */
 
   /* Borders */
   --border-radius-none: 0rem;
