--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,4 @@
+/******************** Start: CSS Definitions ********************/
 :root {
   /* Colors */
   --primary-color-1: hsl(192, 37%, 48%);
@@ -60,9 +61,86 @@
   --border-width-none: 0rem;
   --border-width-s: 0.0625rem; /* 1px */
 }
+/******************** End: CSS Definitions ********************/
+
+/******************** Start: CSS Reset ********************/
+/* Box sizing rules */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+* {
+  margin: 0;
+}
+
+/* Prevent font size inflation */
+html {
+  -moz-text-size-adjust: none;
+  -webkit-text-size-adjust: none;
+  text-size-adjust: none;
+}
+
+/* Remove default margin in favour of better control in authored CSS */
+body,
+h1,
+h2,
+p {
+  margin-block-end: 0;
+}
+
+/* Set core body defaults */
+body {
+  min-height: 100vh;
+  line-height: 1.5;
+  -webkit-font-smoothing: antialiased;
+}
+
+/* Set shorter line heights on headings and interactive elements */
+h1,
+h2 {
+  line-height: 1.1;
+}
+
+/* Balance text wrapping on headings */
+h1,
+h2 {
+  text-wrap: balance;
+}
+
+/* A elements that don't have a class get default styles */
+a:not([class]) {
+  text-decoration-skip-ink: auto;
+  color: var(--link-color);
+}
+
+/* Make images easier to work with */
+img {
+  max-width: 100%;
+  display: block;
+}
+/******************** End: CSS Reset ********************/
+
+/******************** Start: Main stylings ********************/
+@font-face {
+  font-family: "Red Hat Display";
+  src: url("./assets/fonts/RedHatDisplay-Black.ttf") format("truetype");
+  font-weight: 900;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Red Hat Display";
+  src: url("./assets/fonts/RedHatDisplay-Medium.ttf") format("truetype");
+  font-weight: 500;
+  font-display: swap;
+}
 
 body {
+  font-family: "Red Hat Display", sans-serif;
 }
 
 header img {
 }
+/******************** End: Main stylings ********************/
