Working on the demarcation styling

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -32,6 +32,7 @@
 
   /* Spacing 24 space definitions with 6 naming convention = 4 in each group*/
   --space-none: 0rem;
+  --space-xs-5: 0.0625rem; /* 1px */
   --space-xs-1: 0.25rem; /* 4px */
   --space-xs-2: 0.6875rem; /* 11px */
   --space-xs-3: 0.9375rem; /* 15px */
@@ -45,6 +46,7 @@
   --space-base-3: 2.5rem; /* 40px */
   --space-base-4: 3rem; /* 48px */
   --space-medium-1: 3.375rem; /* 54px */
+  --space-medium-5: 3.5rem; /* 56px */
   --space-medium-2: 3.8125rem; /* 61px */
   --space-medium-3: 4rem; /* 64px */
   --space-medium-4: 4.125rem; /* 66px */
@@ -142,6 +144,10 @@ img {
 
 main {
   min-width: 25.875rem; /* 414px */ /*RRC: Explore this - min-width , max-width*/
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* overflow-x: hidden; */
 }
 
 body {
@@ -188,10 +194,9 @@ header {
     "primary-action"
     "."
     "secondary-action";
-  /* grid-template-columns: 1fr; */
-  grid-template-rows: auto var(--space-s-2) auto var(--space-base-1) auto var(
-      --space-xs-4
-    ) auto;
+  grid-template-rows:
+    auto var(--space-s-2) auto var(--space-base-1) auto var(--space-xs-4)
+    auto;
   justify-items: center;
 }
 
@@ -278,4 +283,24 @@ article h1,
 article p {
   max-width: 20.4375rem; /* 327px */
 }
+
+.demarcation-section .number {
+  color: var(--neutral-color-2);
+  font-weight: var(--font-weight-black);
+  border: var(--border-width-s) solid var(--neutral-color-3);
+  border-radius: var(--border-radius-rounded);
+  width: var(--space-medium-5);
+  height: var(--space-medium-5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.demarcation-section .line {
+  width: var(--space-xs-5);
+  height: var(--space-l-4);
+  background-color: var(--neutral-color-3);
+  transform: translateX(1.75rem);
+}
+
 /******************** End: Main stylings ********************/
