add button hover style

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -247,6 +247,10 @@ a {
   gap: var(--space-xs-1);
 }
 
+button:hover {
+    cursor: pointer;
+}
+
 .btn--primary {
   background-color: var(--primary-color-1);
 }
