--- a/stylesheet.css
+++ b/stylesheet.css
@@ -34,7 +34,7 @@
   --space-none: 0rem;
   --space-xs-5: 0.0625rem; /* 1px */
   --space-xs-1: 0.25rem; /* 4px */
-  --space-sx-6: 0.5rem; /*8px*/
+  --space-xs-6: 0.5rem; /*8px*/
   --space-xs-2: 0.6875rem; /* 11px */
   --space-xs-3: 0.9375rem; /* 15px */
   --space-xs-4: 1rem; /* 16px */
@@ -248,7 +248,7 @@ a {
 }
 
 button:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .btn--primary {
@@ -319,7 +319,7 @@ article p {
     "what-is-it__article what-is-it__article";
   row-gap: var(--space-s-2);
   column-gap: var(--space-s-3);
-  grid-template-rows: auto auto var(---space-s-2) auto;
+  grid-template-rows: auto auto var(--space-xs-4) auto;
 }
 
 #what-is-it img {
@@ -369,7 +369,7 @@ main h2 {
 }
 
 #what-is-it__article p:not([class]) {
-  padding-top: var(--space-sx-6);
+  padding-top: var(--space-xs-6);
 }
 
 /******************** End: Main stylings ********************/
