--- a/stylesheet.css
+++ b/stylesheet.css
@@ -161,6 +161,7 @@ body {
   flex-direction: column;
   align-items: center;
   text-align: center;
+  background-color: var(--neutral-color-4);
 }
 
 header {
