Working on the styling for footer section - mobile

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -377,7 +377,7 @@ main h2 {
   grid-area: paragraph;
 }
 
-footer article {
+article.footer {
   display: grid;
   grid-template-areas:
     "heading"
@@ -386,29 +386,49 @@ footer article {
   row-gap: var(--space-s-2);
 }
 
-footer {
-  color: var(--neutral-color-4);
-  background-color: var(--primary-color-1);
-}
-
-footer article {
+article.footer {
   padding: var(--space-medium-3) var(--space-s-2) var(--space-l-2);
 }
 
-footer h2 {
+.footer h2 {
   grid-area: heading;
   font-size: var(--font-size-base);
   font-weight: var(--font-weight-black);
   line-height: var(--line-height-base);
+  color: var(--neutral-color-4);
 }
 
-footer p {
+.footer p {
   grid-area: paragraph;
   font-size: var(--font-size-s);
+  color: var(--neutral-color-4);
 }
 
-footer button {
+.footer button {
   grid-area: action;
   margin-top: var(--space-xs-6);
+}
+
+footer {
+  position: relative;
+}
+
+.footer-background {
+  height: 26.75rem; /* 428px */
+  width: 25.875rem; /* 414px */
+  position: absolute;
+  bottom: 0;
+  z-index: -1;
+  background-color: var(--primary-color-1);
+}
+
+.footer-background picture {
+  mix-blend-mode: soft-light;
+  opacity: 0.5;
+}
+
+footer img {
+  height: 26.75rem; /* 428px */
+  width: 25.875rem; /* 414px */
 }
 /******************** End: Main stylings ********************/
