--- a/assets/stylesheets/_footer.scss
+++ b/assets/stylesheets/_footer.scss
@@ -4,27 +4,27 @@
     "heading"
     "paragraph"
     "action";
-  row-gap: var(--space-s-2);
+  row-gap: $space-s-2;
   justify-items: center;
-  padding: var(--space-medium-3) var(--space-s-2) var(--space-l-2);
+  padding: $space-medium-3 $space-s-2 $space-l-2;
 
   h2 {
     grid-area: heading;
-    font-size: var(--font-size-base);
-    font-weight: var(--font-weight-black);
-    line-height: var(--line-height-base);
-    color: var(--neutral-color-4);
+    font-size: $font-size-base;
+    font-weight: $font-weight-black;
+    line-height: $line-height-base;
+    color: $neutral-color-4;
   }
 
   p {
     grid-area: paragraph;
-    font-size: var(--font-size-s);
-    color: var(--neutral-color-4);
+    font-size: $font-size-s;
+    color: $neutral-color-4;
   }
 
   button {
     grid-area: action;
-    margin-top: var(--space-xs-6);
+    margin-top: $space-xs-6;
   }
 }
 
@@ -38,7 +38,7 @@ footer {
   position: absolute;
   bottom: 0;
   z-index: -1;
-  background-color: var(--primary-color-1);
+  background-color: $primary-color-1;
 
   picture {
     mix-blend-mode: soft-light;
