--- a/assets/stylesheets/_base.scss
+++ b/assets/stylesheets/_base.scss
@@ -1,68 +1,70 @@
-:root {
-  /* Colors */
-  --primary-color-1: hsl(192, 37%, 48%);
-  --primary-color-2: hsl(192, 54%, 64%);
-  --primary-color-3: hsl(192, 90%, 77%);
-  --secondary-color-1: hsl(268, 34%, 53%);
-  --secondary-color-2: hsl(268, 55%, 71%);
-  --secondary-color-3: hsl(268, 100%, 86%);
-  --neutral-color-1: hsl(239, 21%, 20%);
-  --neutral-color-2: hsl(239, 10%, 57%);
-  --neutral-color-3: hsl(240, 10%, 57%, 0.25);
-  --neutral-color-4: hsl(0, 0%, 98%);
-  --neutral-color-5: hsl(0, 0%, 100%);
-  --neutral-color-6: hsl(0, 0%, 85%);
+/* Layout widths */
+$tablet-layout-width: 48rem;
+$desktop-layout-width: 80rem;
 
-  /* Typography */
-  --font-size-xs: 1rem; /* 16px */
-  --font-size-s: 1.125rem; /* 18px */
-  --font-size-base: 2rem; /* 32px */
-  --font-size-medium: 2.5rem; /* 40px */
-  --font-size-l: 3rem; /* 48px */
-  --font-size-xl: 4rem; /* 64px */
-  --font-weight-medium: 500;
-  --font-weight-black: 900;
-  --line-height-xs: 1.625rem; /* 26px */
-  --line-height-base: 2.25rem; /* 36px */
-  --line-height-medium: 2.75rem; /* 44px */
-  --line-height-l: 3rem; /* 48px */
-  --line-height-xl: 4rem; /* 64px */
-  --letter-spacing: 0.25rem; /* 4px */
+/* Colors */
+$primary-color-1: hsl(192, 37%, 48%);
+$primary-color-2: hsl(192, 54%, 64%);
+$primary-color-3: hsl(192, 90%, 77%);
+$secondary-color-1: hsl(268, 34%, 53%);
+$secondary-color-2: hsl(268, 55%, 71%);
+$secondary-color-3: hsl(268, 100%, 86%);
+$neutral-color-1: hsl(239, 21%, 20%);
+$neutral-color-2: hsl(239, 10%, 57%);
+$neutral-color-3: hsl(240, 10%, 57%, 0.25);
+$neutral-color-4: hsl(0, 0%, 98%);
+$neutral-color-5: hsl(0, 0%, 100%);
+$neutral-color-6: hsl(0, 0%, 85%);
 
-  /* Spacing 24 space definitions with 6 naming convention = 4 in each group*/
-  --space-none: 0rem;
-  --space-xs-5: 0.0625rem; /* 1px */
-  --space-xs-1: 0.25rem; /* 4px */
-  --space-xs-6: 0.5rem; /*8px*/
-  --space-xs-2: 0.6875rem; /* 11px */
-  --space-xs-3: 0.9375rem; /* 15px */
-  --space-xs-4: 1rem; /* 16px */
-  --space-s-1: 1.1875rem; /* 19px */
-  --space-s-2: 1.5rem; /* 24px */
-  --space-s-3: 1.5625rem; /* 25px */
-  --space-s-4: 1.875rem; /* 30px */
-  --space-base-1: 2rem; /* 32px */
-  --space-base-2: 2.125rem; /* 34px */
-  --space-base-3: 2.5rem; /* 40px */
-  --space-base-4: 3rem; /* 48px */
-  --space-medium-1: 3.375rem; /* 54px */
-  --space-medium-5: 3.5rem; /* 56px */
-  --space-medium-2: 3.8125rem; /* 61px */
-  --space-medium-3: 4rem; /* 64px */
-  --space-medium-4: 4.125rem; /* 66px */
-  --space-l-1: 4.1875rem; /* 67px */
-  --space-l-2: 4.5rem; /* 72px */
-  --space-l-3: 5rem; /* 80px */
-  --space-l-4: 5.25rem; /* 84px */
-  --space-xl-1: 5.5rem; /* 88px */
-  --space-xl-2: 5.75rem; /* 92px */
-  --space-xl-3: 6.875rem; /* 110px */
-  --space-xl-4: 7.8125rem; /* 125px */
+/* Typography */
+$font-size-xs: 1rem; /* 16px */
+$font-size-s: 1.125rem; /* 18px */
+$font-size-base: 2rem; /* 32px */
+$font-size-medium: 2.5rem; /* 40px */
+$font-size-l: 3rem; /* 48px */
+$font-size-xl: 4rem; /* 64px */
+$font-weight-medium: 500;
+$font-weight-black: 900;
+$line-height-xs: 1.625rem; /* 26px */
+$line-height-base: 2.25rem; /* 36px */
+$line-height-medium: 2.75rem; /* 44px */
+$line-height-l: 3rem; /* 48px */
+$line-height-xl: 4rem; /* 64px */
+$letter-spacing: 0.25rem; /* 4px */
 
-  /* Borders */
-  --border-radius-none: 0rem;
-  --border-radius-soft: 0.5rem; /* 8px */
-  --border-radius-rounded: 1.8125rem; /* 29px */
-  --border-width-none: 0rem;
-  --border-width-s: 0.0625rem; /* 1px */
-}
+/* Spacing 24 space definitions with 6 naming convention = 4 in each group*/
+$space-none: 0rem;
+$space-xs-5: 0.0625rem; /* 1px */
+$space-xs-1: 0.25rem; /* 4px */
+$space-xs-6: 0.5rem; /*8px*/
+$space-xs-2: 0.6875rem; /* 11px */
+$space-xs-3: 0.9375rem; /* 15px */
+$space-xs-4: 1rem; /* 16px */
+$space-s-1: 1.1875rem; /* 19px */
+$space-s-2: 1.5rem; /* 24px */
+$space-s-3: 1.5625rem; /* 25px */
+$space-s-4: 1.875rem; /* 30px */
+$space-base-1: 2rem; /* 32px */
+$space-base-2: 2.125rem; /* 34px */
+$space-base-3: 2.5rem; /* 40px */
+$space-base-4: 3rem; /* 48px */
+$space-medium-1: 3.375rem; /* 54px */
+$space-medium-5: 3.5rem; /* 56px */
+$space-medium-2: 3.8125rem; /* 61px */
+$space-medium-3: 4rem; /* 64px */
+$space-medium-4: 4.125rem; /* 66px */
+$space-l-1: 4.1875rem; /* 67px */
+$space-l-2: 4.5rem; /* 72px */
+$space-l-3: 5rem; /* 80px */
+$space-l-4: 5.25rem; /* 84px */
+$space-xl-1: 5.5rem; /* 88px */
+$space-xl-2: 5.75rem; /* 92px */
+$space-xl-3: 6.875rem; /* 110px */
+$space-xl-4: 7.8125rem; /* 125px */
+
+/* Borders */
+$border-radius-none: 0rem;
+$border-radius-soft: 0.5rem; /* 8px */
+$border-radius-rounded: 1.8125rem; /* 29px */
+$border-width-none: 0rem;
+$border-width-s: 0.0625rem; /* 1px */
