--- a/style.css
+++ b/style.css
@@ -1,72 +1,97 @@
-:root {
-  /* Layout widths */
-  --tablet-layout-width: 48rem;
-  --desktop-layout-width: 80rem;
-  /* Colors */
-  --primary-color-1: hsl(192, 37%, 48%);
-  --primary-color-2: hsl(192, 54%, 64%);
-  --primary-color-3: hsl(192, 90%, 77%);
-  --secondary-color-1: hsl(268, 34%, 53%);
-  --secondary-color-2: hsl(268, 55%, 71%);
-  --secondary-color-3: hsl(268, 100%, 86%);
-  --neutral-color-1: hsl(239, 21%, 20%);
-  --neutral-color-2: hsl(239, 10%, 57%);
-  --neutral-color-3: hsl(240, 10%, 57%, 0.25);
-  --neutral-color-4: hsl(0, 0%, 98%);
-  --neutral-color-5: hsl(0, 0%, 100%);
-  --neutral-color-6: hsl(0, 0%, 85%);
-  /* Typography */
-  --font-size-xs: 1rem; /* 16px */
-  --font-size-s: 1.125rem; /* 18px */
-  --font-size-base: 2rem; /* 32px */
-  --font-size-medium: 2.5rem; /* 40px */
-  --font-size-l: 3rem; /* 48px */
-  --font-size-xl: 4rem; /* 64px */
-  --font-weight-medium: 500;
-  --font-weight-black: 900;
-  --line-height-xs: 1.625rem; /* 26px */
-  --line-height-base: 2.25rem; /* 36px */
-  --line-height-medium: 2.75rem; /* 44px */
-  --line-height-l: 3rem; /* 48px */
-  --line-height-xl: 4rem; /* 64px */
-  --letter-spacing: 0.25rem; /* 4px */
-  /* Spacing 24 space definitions with 6 naming convention = 4 in each group*/
-  --space-none: 0rem;
-  --space-xs-5: 0.0625rem; /* 1px */
-  --space-xs-1: 0.25rem; /* 4px */
-  --space-xs-6: 0.5rem; /*8px*/
-  --space-xs-2: 0.6875rem; /* 11px */
-  --space-xs-3: 0.9375rem; /* 15px */
-  --space-xs-4: 1rem; /* 16px */
-  --space-s-1: 1.1875rem; /* 19px */
-  --space-s-2: 1.5rem; /* 24px */
-  --space-s-3: 1.5625rem; /* 25px */
-  --space-s-4: 1.875rem; /* 30px */
-  --space-base-1: 2rem; /* 32px */
-  --space-base-2: 2.125rem; /* 34px */
-  --space-base-3: 2.5rem; /* 40px */
-  --space-base-4: 3rem; /* 48px */
-  --space-medium-1: 3.375rem; /* 54px */
-  --space-medium-5: 3.5rem; /* 56px */
-  --space-medium-2: 3.8125rem; /* 61px */
-  --space-medium-3: 4rem; /* 64px */
-  --space-medium-4: 4.125rem; /* 66px */
-  --space-l-1: 4.1875rem; /* 67px */
-  --space-l-2: 4.5rem; /* 72px */
-  --space-l-3: 5rem; /* 80px */
-  --space-l-4: 5.25rem; /* 84px */
-  --space-xl-1: 5.5rem; /* 88px */
-  --space-xl-2: 5.75rem; /* 92px */
-  --space-xl-3: 6.875rem; /* 110px */
-  --space-xl-4: 7.8125rem; /* 125px */
-  /* Borders */
-  --border-radius-none: 0rem;
-  --border-radius-soft: 0.5rem; /* 8px */
-  --border-radius-rounded: 1.8125rem; /* 29px */
-  --border-width-none: 0rem;
-  --border-width-s: 0.0625rem; /* 1px */
-}
-
+/* Layout widths */
+/* Colors */
+/* Typography */
+/* 16px */
+/* 18px */
+/* 32px */
+/* 40px */
+/* 48px */
+/* 64px */
+/* 26px */
+/* 36px */
+/* 44px */
+/* 48px */
+/* 64px */
+/* 4px */
+/* Spacing 24 space definitions with 6 naming convention = 4 in each group*/
+/* 1px */
+/* 4px */
+/*8px*/
+/* 11px */
+/* 15px */
+/* 16px */
+/* 19px */
+/* 24px */
+/* 25px */
+/* 30px */
+/* 32px */
+/* 34px */
+/* 40px */
+/* 48px */
+/* 54px */
+/* 56px */
+/* 61px */
+/* 64px */
+/* 66px */
+/* 67px */
+/* 72px */
+/* 80px */
+/* 84px */
+/* 88px */
+/* 92px */
+/* 110px */
+/* 125px */
+/* Borders */
+/* 8px */
+/* 29px */
+/* 1px */
+/* Layout widths */
+/* Colors */
+/* Typography */
+/* 16px */
+/* 18px */
+/* 32px */
+/* 40px */
+/* 48px */
+/* 64px */
+/* 26px */
+/* 36px */
+/* 44px */
+/* 48px */
+/* 64px */
+/* 4px */
+/* Spacing 24 space definitions with 6 naming convention = 4 in each group*/
+/* 1px */
+/* 4px */
+/*8px*/
+/* 11px */
+/* 15px */
+/* 16px */
+/* 19px */
+/* 24px */
+/* 25px */
+/* 30px */
+/* 32px */
+/* 34px */
+/* 40px */
+/* 48px */
+/* 54px */
+/* 56px */
+/* 61px */
+/* 64px */
+/* 66px */
+/* 67px */
+/* 72px */
+/* 80px */
+/* 84px */
+/* 88px */
+/* 92px */
+/* 110px */
+/* 125px */
+/* Borders */
+/* 8px */
+/* 29px */
+/* 1px */
 /* Box sizing rules */
 *,
 *::before,
@@ -114,7 +139,6 @@ button {
 /* A elements that don't have a class get default styles */
 a:not([class]) {
   text-decoration-skip-ink: auto;
-  color: var(--link-color);
 }
 
 /* Make images easier to work with */
@@ -146,53 +170,53 @@ footer {
 
 body {
   font-family: "Red Hat Display", sans-serif;
-  font-size: var(--font-size-xs);
-  font-weight: var(--font-weight-medium);
-  line-height: var(--line-height-xs);
+  font-size: 1rem;
+  font-weight: 500;
+  line-height: 1.625rem;
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
-  background-color: var(--neutral-color-4);
+  background-color: hsl(0, 0%, 98%);
 }
 
 header {
-  padding-top: var(--space-base-4);
-  padding-bottom: var(--space-medium-1);
+  padding-top: 3rem;
+  padding-bottom: 3.375rem;
 }
 
 main h1 {
-  color: var(--neutral-color-1);
-  font-size: var(--font-size-medium);
-  font-weight: var(--font-weight-black);
-  line-height: var(--line-height-medium);
+  color: hsl(239, 21%, 20%);
+  font-size: 2.5rem;
+  font-weight: 900;
+  line-height: 2.75rem;
 }
 main h2 {
-  color: var(--neutral-color-1);
-  font-size: var(--font-size-base);
-  font-weight: var(--font-weight-black);
-  line-height: var(--line-height-base);
+  color: hsl(239, 21%, 20%);
+  font-size: 2rem;
+  font-weight: 900;
+  line-height: 2.25rem;
   grid-area: heading;
 }
 main p {
-  color: var(--neutral-color-2);
-  font-size: var(--font-size-xs);
-  font-weight: var(--font-weight-medium);
-  line-height: var(--line-height-xs);
+  color: hsl(239, 10%, 57%);
+  font-size: 1rem;
+  font-weight: 500;
+  line-height: 1.625rem;
 }
 
 button,
 a {
-  color: var(--neutral-color-5);
-  border-radius: var(--border-radius-rounded);
-  padding: var(--space-xs-4);
-  border-width: var(--border-width-none);
-  font-size: var(--font-size-xs);
-  line-height: var(--line-height-xs); /* Without specifying font size and line height, button has its own style */
-  font-weight: var(--font-weight-black);
+  color: hsl(0, 0%, 100%);
+  border-radius: 1.8125rem;
+  padding: 1rem;
+  border-width: 0rem;
+  font-size: 1rem;
+  line-height: 1.625rem; /* Without specifying font size and line height, button has its own style */
+  font-weight: 900;
   display: flex;
   justify-content: center;
-  gap: var(--space-xs-1);
+  gap: 0.25rem;
 }
 button:hover,
 a:hover {
@@ -200,23 +224,23 @@ a:hover {
 }
 
 .btn--primary {
-  background-color: var(--primary-color-1);
+  background-color: hsl(192, 37%, 48%);
 }
 .btn--primary strong {
-  color: var(--primary-color-3);
+  color: hsl(192, 90%, 77%);
 }
 .btn--primary:hover {
-  background-color: var(--primary-color-2);
+  background-color: hsl(192, 54%, 64%);
 }
 
 .btn--secondary {
-  background-color: var(--secondary-color-1);
+  background-color: hsl(268, 34%, 53%);
 }
 .btn--secondary strong {
-  color: var(--secondary-color-3);
+  color: hsl(268, 100%, 86%);
 }
 .btn--secondary:hover {
-  background-color: var(--secondary-color-2);
+  background-color: hsl(268, 55%, 71%);
 }
 
 a {
@@ -235,29 +259,29 @@ article p {
 }
 
 .demarcation-section .number {
-  color: var(--neutral-color-2);
-  font-weight: var(--font-weight-black);
-  border: var(--border-width-s) solid var(--neutral-color-3);
-  border-radius: var(--border-radius-rounded);
-  width: var(--space-medium-5);
-  height: var(--space-medium-5);
+  color: hsl(239, 10%, 57%);
+  font-weight: 900;
+  border: 0.0625rem solid hsla(240, 10%, 57%, 0.25);
+  border-radius: 1.8125rem;
+  width: 3.5rem;
+  height: 3.5rem;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: var(--neutral-color-4);
+  background-color: hsl(0, 0%, 98%);
 }
 .demarcation-section .line {
-  width: var(--space-xs-5);
-  height: var(--space-l-4);
-  background-color: var(--neutral-color-3);
+  width: 0.0625rem;
+  height: 5.25rem;
+  background-color: hsla(240, 10%, 57%, 0.25);
   transform: translateX(1.75rem);
 }
 
 #intro-section {
   display: grid;
   grid-template-areas: "hero-left hero-right" "group-chat-article group-chat-article";
-  column-gap: var(--space-xs-4);
-  row-gap: var(--space-base-4);
+  column-gap: 1rem;
+  row-gap: 3rem;
 }
 #intro-section img {
   width: 12.4375rem; /* 199px */
@@ -272,10 +296,10 @@ article p {
 
 #intro-section__article {
   grid-area: group-chat-article;
-  padding: var(--space-none) var(--space-s-2) var(--space-medium-3);
+  padding: 0rem 1.5rem 4rem;
   display: grid;
   grid-template-areas: "heading" "." "paragraph" "." "primary-action" "." "secondary-action";
-  grid-template-rows: auto var(--space-s-2) auto var(--space-base-1) auto var(--space-xs-4) auto;
+  grid-template-rows: auto 1.5rem auto 2rem auto 1rem auto;
   justify-items: center;
 }
 #intro-section__article h1 {
@@ -292,15 +316,15 @@ article p {
 }
 
 #what-is-it {
-  padding: var(--space-medium-3) var(--space-s-2);
+  padding: 4rem 1.5rem;
   display: grid;
   grid-template-areas: "image-woman-in-videocall image-women-videochatting" "image-men-in-meeting image-man-texting" ". ." "what-is-it__article what-is-it__article";
-  row-gap: var(--space-s-2);
-  column-gap: var(--space-s-3);
-  grid-template-rows: auto auto var(--space-xs-4) auto;
+  row-gap: 1.5rem;
+  column-gap: 1.5625rem;
+  grid-template-rows: auto auto 1rem auto;
 }
 #what-is-it img {
-  border-radius: var(--border-radius-soft);
+  border-radius: 0.5rem;
   width: 9.4375rem; /*151px*/
   height: 8.9375rem; /*143px*/
 }
@@ -321,43 +345,43 @@ article p {
   grid-area: what-is-it__article;
   display: grid;
   grid-template-areas: "ribbon-text" "heading" "paragraph";
-  row-gap: var(--space-s-2);
+  row-gap: 1.5rem;
 }
 #what-is-it__article p:not([class]) {
-  padding-top: var(--space-xs-6);
+  padding-top: 0.5rem;
   grid-area: paragraph;
 }
 
 .ribbon-text {
   grid-area: ribbon-text;
   text-transform: uppercase;
-  color: var(--primary-color-1);
-  font-weight: var(--font-weight-black);
-  letter-spacing: var(--letter-spacing);
+  color: hsl(192, 37%, 48%);
+  font-weight: 900;
+  letter-spacing: 0.25rem;
 }
 
 .footer {
   display: grid;
   grid-template-areas: "heading" "paragraph" "action";
-  row-gap: var(--space-s-2);
+  row-gap: 1.5rem;
   justify-items: center;
-  padding: var(--space-medium-3) var(--space-s-2) var(--space-l-2);
+  padding: 4rem 1.5rem 4.5rem;
 }
 .footer h2 {
   grid-area: heading;
-  font-size: var(--font-size-base);
-  font-weight: var(--font-weight-black);
-  line-height: var(--line-height-base);
-  color: var(--neutral-color-4);
+  font-size: 2rem;
+  font-weight: 900;
+  line-height: 2.25rem;
+  color: hsl(0, 0%, 98%);
 }
 .footer p {
   grid-area: paragraph;
-  font-size: var(--font-size-s);
-  color: var(--neutral-color-4);
+  font-size: 1.125rem;
+  color: hsl(0, 0%, 98%);
 }
 .footer button {
   grid-area: action;
-  margin-top: var(--space-xs-6);
+  margin-top: 0.5rem;
 }
 
 footer {
@@ -370,7 +394,7 @@ footer {
   position: absolute;
   bottom: 0;
   z-index: -1;
-  background-color: var(--primary-color-1);
+  background-color: hsl(192, 37%, 48%);
 }
 .footer-background picture {
   mix-blend-mode: soft-light;
