--- a/assets/stylesheets/_intro-section.scss
+++ b/assets/stylesheets/_intro-section.scss
@@ -64,6 +64,7 @@
       "primary-action secondary-action";
     grid-template-rows: auto $space-s-2 auto $space-base-1 auto;
     padding: $space-none $space-none $space-l-3;
+    column-gap: $space-base-1;
   }
 
   #intro-section {
