--- a/assets/stylesheets/_intro-section.scss
+++ b/assets/stylesheets/_intro-section.scss
@@ -57,11 +57,11 @@
 @media (min-width: $tablet-layout-width) {
   #intro-section__article {
     grid-template-areas:
-      "heading heading"
-      ". ."
-      "paragraph paragraph"
-      ". ."
-      "primary-action secondary-action";
+      "heading heading heading heading"
+      ". . . ."
+      "paragraph paragraph paragraph paragraph"
+      ". . . ."
+      ". primary-action secondary-action .";
     grid-template-rows: auto $space-s-2 auto $space-base-1 auto;
     padding: $space-none $space-none $space-l-3;
     column-gap: $space-base-1;
@@ -70,6 +70,7 @@
   #intro-section {
     column-gap: $space-base-1;
     row-gap: $space-l-2;
+    justify-items: center;
 
     img {
       width: 24.625rem; /*394px*/
