--- a/assets/stylesheets/_footer.scss
+++ b/assets/stylesheets/_footer.scss
@@ -34,7 +34,7 @@ footer {
 
 .footer-background {
   height: 26.75rem; /* 428px */
-  width: 25.875rem; /* 414px */
+  width: 100%;
   position: absolute;
   bottom: 0;
   z-index: -1;
@@ -46,7 +46,23 @@ footer {
   }
 
   img {
-    height: 26.75rem; /* 428px */
-    width: 25.875rem; /* 414px */
+    height: 100%;
+    width: 100%;
+  }
+}
+
+@media (min-width: $tablet-layout-width) {
+  .footer {
+    row-gap: $space-base-1;
+    padding: $space-medium-3 $space-s-2 $space-medium-4;
+
+    h2 {
+      font-size: $font-size-medium;
+      line-height: $line-height-medium;
+    }
+
+    p {
+      max-width: 35.8125rem; /* 573px */
+    }
   }
 }
